syntax = "proto3";

option go_package = "./;pb";

import "google/protobuf/any.proto";

message Stack { string verbose = 1; }

message Code { uint32 http_status = 1; }

message Journal {
  string id = 1;
  Lable label = 2;
  Request request = 3;
  Response response = 4;
  bool success = 5;
  double cost_seconds = 6;
}

message Lable {
  uint32 sequence = 1;
  string desc = 2;
}

message Request {
  bool restapi = 1;
  string method = 2;
  map<string, string> metadata = 3;
  google.protobuf.Any payload = 4;
}

message Response {
  string code = 1;
  string message = 2;
  string error_verbose = 3;
  google.protobuf.Any payload = 4;
}